RESOLVED FIXED301654
REGRESSION(iOS26): TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionWithExtentPoint is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=301654
Summary REGRESSION(iOS26): TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionW...
Robert Jenner
Reported 2025-10-29 14:10:14 PDT
TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionWithExtentPoint is a constant failure on iOS26. It was not failing on iOS18. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionWithExtentPoint FAILURE ERROR: "name": "TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionWithExtentPoint", "output": "2025-10-29 08:13:10.506 TestWebKitAPI[53982:1195996] Successfully load keyboard extensions\n\n/Volumes/Data/worker/Apple-iOS-26-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/ios/UIWKInteractionViewProtocol.mm:143\nExpected equality of these values:\n \"Hello world\"\n [webView stringByEvaluatingJavaScript:@\"getSelection().toString()\"]\n Which is: \"d\"\n\n\n\n/Volumes/Data/worker/Apple-iOS-26-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/ios/UIWKInteractionViewProtocol.mm:150\nExpected equality of these values:\n \"Hello world\"\n [webView stringByEvaluatingJavaScript:@\"getSelection().toString()\"]\n Which is: \"H\""
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-29 14:10:31 PDT
Robert Jenner
Comment 2 2025-10-29 14:15:13 PDT
I was able to reproduce this failure at iOS26 Debug ToT running the test as follows: run-api-tests --iOS-simulator TestWebKitAPI.UIWKInteractionViewProtocol.UpdateSelectionWithExtentPoint This test turned into a constant failure when we brought up testing on iOS26. It was a constant pass on iOS18.
EWS
Comment 3 2025-10-29 14:18:30 PDT
Test gardening commit 302311@main (b22f9c3c77c1): <https://commits.webkit.org/302311@main> Reviewed commits have been landed. Closing PR #53164 and removing active labels.
Robert Jenner
Comment 4 2025-10-29 14:19:32 PDT
(In reply to EWS from comment #3) > Test gardening commit 302311@main (b22f9c3c77c1): > <https://commits.webkit.org/302311@main> > > Reviewed commits have been landed. Closing PR #53164 and removing active > labels. I have disabled the test with this commit, while under investigation.
Wenson Hsieh
Comment 5 2025-10-31 09:50:23 PDT
EWS
Comment 6 2025-10-31 16:21:44 PDT
Committed 302411@main (9a6df17ea66f): <https://commits.webkit.org/302411@main> Reviewed commits have been landed. Closing PR #53262 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.